syntax = "proto3";

package applications;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ApicaSystem/apicactl/api/v1/applications;applications";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info : {
    title : "Applications";
    version
        :
        "1.0"
    ;
  }
  ;


  schemes
      :
      HTTP
  ;
  schemes
      :
      HTTPS
  ;
  consumes
      :
      "application/json"
  ;
  produces
      :
      "application/json"
  ;

  responses
      :
  {
    key
        :
        "400"
    ;
    value
        :
    {
      description
          :
          "Invalid Request."
    }
  }
  responses
      :
  {
    key
        :
        "401"
    value
        :
    {
      description
          :
          "Token Expired."
    }
  }
}
;

message Application {
  string OrgID = 1;
  string Name = 2;
  string CreatedTime = 3;
  string Host = 4;
  string Namespace = 5;
  string Procid = 6;
  int64 lastSeen = 7;
  int64 firstSeen = 8;
}

// V2 in the new normalized version of V1 table.
message ApplicationV2 {
  string destination = 1;
  string namespace = 2;
  string name = 3;
  int64 lastSeen = 4;
  int64 firstSeen = 5;
}

message GetApplicationsRequest {
  string namespace = 1;
  uint64 page = 2;
  uint64 size = 3;
  string destination = 4;
}

message GetApplicationsResponseV2 {
  repeated ApplicationV2 applications = 2;
}


message GetApplicationsRequestV3 {
  repeated string  namespaces = 1;
  uint64 count = 2;
  uint64 offset = 3;
  repeated string  applications = 4;
  string sortAttribute = 5;
  string sortOrder = 6;
  uint64 lastSeenStartTime = 7;
  uint64 lastSeenEndTime = 8;
  repeated string search = 9;
}

message GetApplicationsResponseV3 {
  uint64 total_count = 1;
  uint64 offset = 2;
  uint64 count = 3;
  repeated ApplicationV2 applications = 4;
}


message ApplicationsResponse {
  repeated string applications = 2 [deprecated = true];
  repeated Application applications_list = 3;
  uint64 total_count = 4;
}

message GetApplicationsResponse {
  ApplicationsResponse response = 1;
}

service ApplicationsService {
  rpc GetApplicationsV2 (GetApplicationsRequest) returns (GetApplicationsResponseV2) {
    option (google.api.http) = {
      get : "/v2/applications",
    };
  };
  rpc GetApplications (google.protobuf.Empty) returns (GetApplicationsResponse) {
    option (google.api.http) = {
      get : "/v1/applications",
    };
  };


  rpc GetApplicationsV3 (GetApplicationsRequestV3) returns (GetApplicationsResponseV3) {
    option (google.api.http) = {
      get : "/v2/applications_v3",
    };
  };
}
